# website

./: .gitignore  .gitmodules  wrangler.toml
.github/workflows/: deploy.yml
.kiro/specs/ezeroandone-core-engine/: .config.kiro  design.md  requirements.md  tasks.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/functions/api/: [[path]].js
frontend/functions/media/: [[path]].js
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: api.test.ts  api.ts
frontend/src/lib/components/: FloatingHeader.svelte  GlassCard.svelte  MaterialIconPicker.svelte  NeuralBrain.svelte  SiteFooter.svelte  SiteNav.svelte
frontend/src/lib/stores/: theme.test.ts  theme.ts
frontend/src/lib/test-mocks/: app-environment.ts  app-stores.ts
frontend/src/lib/utils/: markdown.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/(admin)/: +layout.server.ts  +layout.svelte
frontend/src/routes/team/: +page.svelte  (+1 more)
frontend/static/: _redirects
logos/: OJISTRAVELS.htm
scripts/: .populate-state.json  add-screenshots.mjs  cleanup-clients.mjs  fix-publish.mjs  list-clients.mjs  patch-images.mjs  populate-capabilities-insights.mjs  populate-work.mjs  test-media.mjs  test-patch.mjs  test-r2.mjs  test-worker.mjs  update-work-posts.mjs  upload-clients.mjs
worker/: Cargo.toml  proptest.toml
worker/.cargo/: config.toml
worker/migrations/: 0001_initial.sql  0002_post_meta.sql
worker/proptest-regressions/middleware/: auth.txt
worker/src/: lib.rs  router.rs
worker/src/crypto/: jwt.rs  mod.rs  signing_key.rs  token.rs
worker/src/db/: migrations.rs  mod.rs  queries.rs  schema_tests.rs
worker/src/email/: mod.rs  provider.rs
worker/src/handlers/: admin.rs  auth.rs  careers.rs  content.rs  mod.rs  onboarding.rs  storage.rs  team.rs  verify.rs
worker/src/middleware/: auth.rs  cors.rs  rate_limit.rs
worker/src/models/: career.rs  content.rs  mod.rs  session.rs  staff.rs  tests.rs
worker/src/storage/: mod.rs  r2.rs  validator.rs
(+37 files in other folders)
